--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="mensaje_error_preferencias2">Error al obtener preferencias - shouldCustomizeName</string>
     <string name="mensaje_error_listaLibros">Error al obtener la lista de libros</string>
 
+
     <!-- Buttons -->
     <string name="button_save">Guardar</string>
     <string name="button_cancel">Cancelar</string>
@@ -54,6 +55,7 @@
     <string name="sample_author">Suzanne Collins</string>
     <string name="sample_publishing_house">Scholastic Press</string>
     <string name="sample_isbn">9891231512131231587</string>
+    <string name="checkbox_pendiente">Pendiente</string>
 
     <string name="push_notif_channel_id">2</string>
 
